maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:8: error: type mismatch;
 found   : Unit
 required: Boolean
if (nombre=0)
          ^RandomMouseMaze:12: error: type mismatch;
 found   : Unit
 required: Boolean
if (nombre=1)
          ^RandomMouseMaze:16: error: type mismatch;
 found   : Unit
 required: Boolean
if (nombre=2)
          ^